@@ -40,4 +40,39 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+            <id>jdk19-plus</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            
+            <build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<source>9</source>
+							<target>9</target>
+	                        <compilerArgs>
+								<arg>--add-modules</arg>
+								<arg>java.smartcardio</arg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+					<plugin>
+	                    <groupId>org.apache.maven.plugins</groupId>
+	                    <artifactId>maven-javadoc-plugin</artifactId>
+	                    <configuration>
+	                        <additionalJOptions>
+	                         <additionalJOption>-html5</additionalJOption>
+	                            <additionalJOption>--add-modules</additionalJOption>
+	                            <additionalJOption>java.smartcardio</additionalJOption>
+	                        </additionalJOptions>
+	                    </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
